[package]
name = "android-bgfx-rs-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bgfx-rs = { path = "../bgfx-rs" }
winit = { git = "https://github.com/Kaiser1989/winit" }
raw-window-handle = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.5.0"
ndk-glue = "0.5.0"

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 24
max_sdk_version = 24

[package.metadata.android.application.activity]
config_changes = "orientation"
orientation = "landscape"
